2014-03-20  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (loading_client_handle, scanner_thread): Adjust
	ovas_scanner_context_attach call.
	(ssl_ver_to_encaps): Delete function.
	(init_ssl_ctx): Always create ovas_scanner_ctx with
	OPENVAS_ENCAPS_TLScustom.

2014-03-19  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Report current and total number of loading plugins to clients when
	scanner is still loading.

	* src/comm.c (comm_loading): Send current and total loading values with
	SCANNER_LOADING otp command.

	* src/openvassd.c: Delete include of removed file.
	(loading_handler_start, loading_handler_stop): Initialize and destroy
	loading plugins shared memory.

	* src/pluginload.c (init_loading_shm, destroy_loading_shm)
	(current_loading_plugins, total_loading_plugins)
	(set_current_loading_plugins, set_total_loading_plugins): New functions.
	(plugins_reload_from_dir): Update number of currently and total loading
	plugins in the shared memory to be seen by other processes.

	* src/pluginload.h: Add function prototypes.

2014-03-18  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 4.0+beta9.

2014-03-18  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 4.0+beta8 release.

	* CHANGES: Updated.

2014-03-18  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (main): In only cache mode, refresh the plugins cache
	early, without listening on the network and skipping other
	unused initializations.

2014-03-17  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (sighand_loading_stop): New function.
	(loading_handler_start): Add SIGTERM handler for loading handler child
	process. This ensures the loading handler isn't abruptly terminated by
	the parent while responding to a client.

2014-03-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/greenbone-nvt-sync (update_openvassd, update_openvasmd): Add