@@ -45,6 +45,11 @@ Tell the scanner to listen on connection on the port <port-number> rather
 than listening on port 9391 (default).
 
 .TP 
+.BI " --gnutls-priorities=" <priority-string>
+Sets the GnuTLS priority string for the listening socket to adjust the supported
+cipher suites.
+
+.TP 
 .B "-f, --foreground"
 Make the scanner stay in foreground (non-daemon mode)
 
